// Vitest Snapshot v1

exports[`ConfigProvider > ConfigProvider calendarVue demo works fine 1`] = `
<t-config-provider
  data-v-2441a166=""
  globalconfig="[object Object]"
  style="padding: 16px;"
>
  <t-calendar
    data-v-2441a166=""
  />
</t-config-provider>
`;

exports[`ConfigProvider > ConfigProvider datePickerVue demo works fine 1`] = `
<t-config-provider
  class="tdesign-demo-item__locale-provider-date-picker"
  data-v-a34a89d6=""
  globalconfig="[object Object]"
>
  <t-date-picker
    data-v-a34a89d6=""
    firstdayofweek="7"
    mode="date"
  />
  <br
    data-v-a34a89d6=""
  />
  <br
    data-v-a34a89d6=""
  />
  <t-date-picker
    data-v-a34a89d6=""
    mode="date"
    range=""
  />
  <br
    data-v-a34a89d6=""
  />
  <br
    data-v-a34a89d6=""
  />
  <t-date-picker
    data-v-a34a89d6=""
    mode="month"
  />
  <br
    data-v-a34a89d6=""
  />
  <br
    data-v-a34a89d6=""
  />
  <t-date-picker
    data-v-a34a89d6=""
    mode="month"
    range=""
  />
  <br
    data-v-a34a89d6=""
  />
  <br
    data-v-a34a89d6=""
  />
  <t-date-picker
    data-v-a34a89d6=""
    mode="year"
  />
  <br
    data-v-a34a89d6=""
  />
  <br
    data-v-a34a89d6=""
  />
  <t-date-picker
    data-v-a34a89d6=""
    mode="year"
    range=""
  />
  <br
    data-v-a34a89d6=""
  />
  <br
    data-v-a34a89d6=""
  />
</t-config-provider>
`;

exports[`ConfigProvider > ConfigProvider dialogVue demo works fine 1`] = `
<t-config-provider
  data-v-6be7f270=""
  globalconfig="[object Object]"
  style="padding: 16px;"
>
  <div
    data-v-6be7f270=""
    style="width: 480px;"
  >
    <t-dialog
      body="Would you like to be my friends？"
      data-v-6be7f270=""
      header="Title"
      mode="normal"
      theme="default"
      visible=""
    />
    <br
      data-v-6be7f270=""
    />
    <t-dialog
      body="Would you like to be my friends？"
      data-v-6be7f270=""
      header="confirm"
      mode="normal"
      theme="info"
      visible=""
    />
    <br
      data-v-6be7f270=""
    />
    <t-dialog
      body="Would you like to be my friends？"
      data-v-6be7f270=""
      header="confirm"
      mode="normal"
      theme="warning"
      visible=""
    />
    <br
      data-v-6be7f270=""
    />
    <t-dialog
      body="Would you like to be my friends？"
      data-v-6be7f270=""
      header="confirm"
      mode="normal"
      theme="danger"
      visible=""
    />
    <br
      data-v-6be7f270=""
    />
    <t-dialog
      body="Would you like to be my friends？"
      data-v-6be7f270=""
      header="confirm"
      mode="normal"
      theme="success"
      visible=""
    />
  </div>
</t-config-provider>
`;

exports[`ConfigProvider > ConfigProvider globalVue demo works fine 1`] = `
<t-config-provider
  global-config="[object Object]"
>
  <t-space
    direction="vertical"
  >
    <p>
      使用
      <code>
        t-config-provider
      </code>
      包裹业务功能的最外层组件，点击下方图标查看示例代码
    </p>
    <p>
      英文语言包引入路径：
      <code>
        import enConfig from 'tdesign-vue/es/locale/en_US';
      </code>
    </p>
    <p>
      中文语言包引入路径：
      <code>
        import zhConfig from 'tdesign-vue/es/locale/zh_CN';
      </code>
    </p>
    <p>
      日文语言包引入路径：
      <code>
        import jpConfig from 'tdesign-react/es/locale/ja_JP';
      </code>
    </p>
    <p>
      韩文语言包引入路径：
      <code>
        import koConfig from 'tdesign-react/es/locale/ko_KR';
      </code>
    </p>
  </t-space>
</t-config-provider>
`;

exports[`ConfigProvider > ConfigProvider inputVue demo works fine 1`] = `
<t-config-provider
  globalconfig="[object Object]"
>
  <t-input
    default-value="520 TDesign"
    type="password"
  />
</t-config-provider>
`;

exports[`ConfigProvider > ConfigProvider othersVue demo works fine 1`] = `
<t-config-provider
  class="tdesign-demo-item--locale-provider-base"
  data-v-96b659ea=""
  globalconfig="[object Object]"
>
  <t-form
    data="[object Object]"
    data-v-96b659ea=""
    rules="[object Object]"
  >
    <t-form-item
      data-v-96b659ea=""
      label="User Name"
      name="username"
    >
      <t-input
        data-v-96b659ea=""
        placeholder="There is no required mark on the left of this input in Form"
        style="width: 400px;"
      />
    </t-form-item>
    <t-form-item
      data-v-96b659ea=""
      label="Password"
      name="password"
      requiredmark=""
    >
      <t-input
        data-v-96b659ea=""
        placeholder="There is required mark on the left of this input in Form"
        style="width: 400px;"
        type="password"
      />
    </t-form-item>
  </t-form>
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-transfer
    checked=""
    data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    data-v-96b659ea=""
    search="true"
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-select
    clearable=""
    data-v-96b659ea=""
    options="[object Object],[object Object],[object Object]"
    placeholder="see clear icon, it is configurable"
    style="width: 400px;"
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-select
    data-v-96b659ea=""
    options=""
    placeholder="select without data in Select"
    style="width: 400px;"
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-select
    data-v-96b659ea=""
    loading=""
    placeholder="see loading text in Select"
    style="width: 400px;"
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-cascader
    data-v-96b659ea=""
    options=""
    style="width: 400px;"
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-cascader
    data-v-96b659ea=""
    options=""
    placeholder="select without data in Cascader"
    style="width: 400px;"
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-tree-select
    data=""
    data-v-96b659ea=""
    placeholder="see empty data in TreeSelect"
    style="width: 400px;"
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-tree-select
    data=""
    data-v-96b659ea=""
    loading=""
    placeholder="see loading text in TreeSelect"
    style="width: 400px;"
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-tree-select
    clearable=""
    data="[object Object],[object Object]"
    data-v-96b659ea=""
    filterable=""
    placeholder="tree select"
    style="width: 400px;"
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-time-picker
    allowinput=""
    data-v-96b659ea=""
    format="hh:mm:ss a"
    placeholder="select time"
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-tag
    closable=""
    data-v-96b659ea=""
    theme="primary"
  >
    Feature Tag
  </t-tag>
  <t-tag
    closable=""
    data-v-96b659ea=""
    theme="success"
  >
    Feature Tag
  </t-tag>
  <t-tag
    closable=""
    data-v-96b659ea=""
    theme="warning"
  >
    Feature Tag
  </t-tag>
  <t-tag
    closable=""
    data-v-96b659ea=""
    theme="danger"
  >
    Feature Tag
  </t-tag>
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-tree
    data=""
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-tree
    data="[object Object],[object Object]"
    data-v-96b659ea=""
    transition=""
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
  <t-steps
    current="2"
    data-v-96b659ea=""
    layout="vertical"
  >
    <t-step-item
      content="You need to click the blue button"
      data-v-96b659ea=""
      title="First Step"
    />
    <t-step-item
      content="Fill your base information into the form"
      data-v-96b659ea=""
      title="Second Step"
    />
    <t-step-item
      content="Something Wrong! Custom Error Icon!"
      data-v-96b659ea=""
      status="error"
      title="Error Step"
    />
    <t-step-item
      content="You haven't finish this step."
      data-v-96b659ea=""
      title="Last Step"
    />
  </t-steps>
  <br
    data-v-96b659ea=""
  />
  <br
    data-v-96b659ea=""
  />
</t-config-provider>
`;

exports[`ConfigProvider > ConfigProvider paginationVue demo works fine 1`] = `
<t-config-provider
  data-v-4ae7ebc2=""
  globalconfig="[object Object]"
  style="padding: 16px;"
>
  <t-pagination
    data-v-4ae7ebc2=""
    maxpagebtn="5"
    show-jumper=""
    total="36"
  />
</t-config-provider>
`;

exports[`ConfigProvider > ConfigProvider popconfirmVue demo works fine 1`] = `
<t-config-provider
  data-v-1f100e12=""
  globalconfig="[object Object]"
  style="padding: 16px;"
>
  <div
    class="tdesign-demo-item__config-provider-base"
    data-v-1f100e12=""
  >
    <t-popconfirm
      content="Do you want to delete"
      data-v-1f100e12=""
      theme="default"
    >
      <t-button
        data-v-1f100e12=""
      >
        Default
      </t-button>
    </t-popconfirm>
    <t-popconfirm
      content="Do you want to delete"
      data-v-1f100e12=""
      theme="warning"
    >
      <t-button
        data-v-1f100e12=""
        theme="warning"
      >
        Warning
      </t-button>
    </t-popconfirm>
    <t-popconfirm
      content="Do you want to delete"
      data-v-1f100e12=""
      theme="danger"
    >
      <t-button
        data-v-1f100e12=""
        theme="danger"
      >
        Danger
      </t-button>
    </t-popconfirm>
    <t-button
      data-v-1f100e12=""
      theme="primary"
    >
      Open Drawer
    </t-button>
    <t-drawer
      closebtn="true"
      data-v-1f100e12=""
      header="Drawer"
      onconfirm="function () { return (_vm.drawerVisible = false); }"
    >
      <p
        data-v-1f100e12=""
      >
        This is a controlled drawer
      </p>
    </t-drawer>
  </div>
</t-config-provider>
`;

exports[`ConfigProvider > ConfigProvider tableVue demo works fine 1`] = `
<t-config-provider
  data-v-7dcbc254=""
  globalconfig="[object Object]"
  style="padding: 16px;"
>
  <t-table
    bordered=""
    columns="[object Object],[object Object],[object Object]"
    data=""
    data-v-7dcbc254=""
    rowkey="property"
  />
  <br
    data-v-7dcbc254=""
  />
  <br
    data-v-7dcbc254=""
  />
  <t-table
    columns="[object Object],[object Object],[object Object]"
    data="[object Object],[object Object],[object Object]"
    data-v-7dcbc254=""
    expandedrow="function () { [native code] }"
    expandonrowclick=""
    rowkey="property"
  />
  <br
    data-v-7dcbc254=""
  />
  <br
    data-v-7dcbc254=""
  />
</t-config-provider>
`;
